# signet

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh.md  TODOS.md  bug.md  demo.cast  demo.sh  glama.json  package-lock.json  package.json  rust-toolchain.toml
.claude-plugin/: marketplace.json
.context/: codex-session-id
.devcontainer/: devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clawhub-test.yml  openclaw-contract-check.yml  openclaw-plugin-publish.yml  release.yml
bindings/signet-py/: Cargo.toml  README.md  pyproject.toml
bindings/signet-py/python/signet_auth/: __init__.py  _signet.pyi  _types.pyi  agent.py  autogen.py  compliance_backend.py  crewai.py  decorator.py  google_adk.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  pydantic_ai_integration.py  semantic_kernel.py  server.py  smolagents.py
bindings/signet-py/scripts/: generate-interop-fixtures.py
bindings/signet-py/src/: audit_fns.rs  core_fns.rs  errors.rs  identity_fns.rs  lib.rs  types.rs
bindings/signet-py/tests/: test_agent.py  test_audit.py  test_autogen.py  test_bilateral.py  test_bilateral_options.py  test_compliance_backend.py  test_compound.py  test_core.py  test_crewai.py  test_decorator.py  test_delegation.py  test_expiration.py  test_google_adk.py  test_identity.py  test_interop.py  test_langchain.py  test_langgraph.py  test_llamaindex.py  test_openai_agents.py  test_policy.py  test_pydantic_ai.py  test_semantic_kernel.py  test_server.py  test_smolagents.py  test_trace.py
bindings/signet-ts/: Cargo.toml
bindings/signet-ts/src/: lib.rs
crates/signet-core/: Cargo.toml  README.md
crates/signet-core/src/: audit.rs  canonical.rs  delegation.rs  error.rs  identity.rs  keystore.rs  lib.rs  policy.rs  policy_eval.rs  policy_load.rs  receipt.rs  sign.rs  sign_delegation.rs  trust.rs  verify.rs  verify_delegation.rs
docs/: ARCHITECTURE.md  COMPLIANCE.md  SECURITY.md  release-notes-all.md  release-notes-v0.5.0.md
docs/blog/: 2026-03-30-show-hn-signet.md  2026-03-30-signet-launch-zh.md
docs/guides/: audit-log.md  ci-integration.md  mcp-integration.md  team-deployment.md
docs/marketing/: hn-faq.md  hn-post.md  terminal-demo.sh  twitter-thread.md
docs/plans/: 2026-03-29-signet-design.md
docs/rfcs/: 0001-delegation-chain.md  0002-composite-receipt.md
docs/specs/: delegation-chain-impl-plan.md  delegation-chain-spec.md
docs/superpowers/plans/: 2026-03-29-m0-tech-validation.md  2026-03-29-m1-core-cli.md  2026-03-29-m2-audit-chain.md  2026-03-29-m3-wasm-mcp.md  2026-03-30-distribution.md  2026-04-05-claude-code-plugin.md
docs/superpowers/specs/: 2026-03-29-m0-tech-validation-design.md  2026-03-29-m1-core-cli-design.md  2026-03-29-m2-audit-chain-design.md  2026-03-29-m3-wasm-mcp-design.md  2026-04-05-claude-code-plugin-design.md
examples/: capture-dashboard.mjs  demo-delegation.mjs  render-delegation-assets.sh
examples/demo-e2e/: record.sh
examples/langchain-compliance/: README.md  agent.py  policy.yaml  verify.py
examples/mcp-agent/: agent.ts  demo-execution-boundary.mjs  echo-server.ts  generate-execution-boundary-cast.mjs  package-lock.json  package.json  render-execution-boundary-assets.sh  verifier-server-lib.mjs  verifier-server.mjs  verifier-server.test.mjs
examples/python-basic/: demo_autogen.py  demo_compound.py  demo_langchain.py  demo_server_verify.py  demo_signing.py
examples/wasm-roundtrip/: test.mjs
plugins/claude-code/: .gitattributes  .gitignore  README.md  package.json
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/lib/: audit.cjs  signet.cjs
plugins/claude-code/skills/signet/: SKILL.md
plugins/claude-code/tests/: audit.test.cjs  sign-hook.test.cjs  signet.test.cjs
plugins/claude-code/wasm/: signet_wasm.js  signet_wasm_bg.wasm
plugins/codex/: .gitignore  README.md  package.json
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/hooks/: hooks.json
plugins/codex/lib/: audit.cjs  signet.cjs
plugins/codex/scripts/: build-plugin.sh
plugins/codex/skills/signet/: SKILL.md
plugins/codex/tests/: sign-hook.test.cjs  signet.test.cjs
scripts/: check-openclaw-contract.mjs  demo-pilot.sh  version-sync.mjs
signet-cli/: Cargo.toml
signet-cli/src/: audit_helpers.rs  cmd_audit.rs  cmd_claude.rs  cmd_dashboard.rs  cmd_delegate.rs  cmd_explore.rs  cmd_identity.rs  cmd_policy.rs  cmd_proxy.rs  cmd_quickstart.rs  cmd_sign.rs  cmd_trust.rs  cmd_verify.rs  main.rs  trust_helpers.rs
signet-cli/src/dashboard/: api.rs  mod.rs  static_files.rs
signet-cli/static/: index.html
signet-cli/tests/: cli.rs  mock_mcp_server.py
