[package]
name = "signet-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Signet cryptographic action receipts"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "signet"
path = "src/main.rs"

[dependencies]
signet-core = { path = "../crates/signet-core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
anyhow = "1"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
