[package]
name = "signet-cli"
version = "0.4.5"
edition = "2021"
description = "CLI tool for Signet cryptographic action receipts"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Prismer-AI/signet"
keywords = ["ed25519", "signing", "ai-agent", "mcp", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "signet"
path = "src/main.rs"

[dependencies]
signet-core = { version = "0.4.5", path = "../crates/signet-core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
anyhow = "1"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
