[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "signet-auth"
version = "0.4.0"
description = "Cryptographic action receipts for AI agents"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
python-source = "python"
module-name = "signet_auth._signet"
