[package]
name = "signet-wasm"
version = "0.9.3"
edition = "2021"
description = "WASM bindings for signet-core"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
signet-core = { path = "../../crates/signet-core" }
wasm-bindgen = "0.2"
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
