[package]
name = "signet-core"
version = "0.9.1"
edition = "2021"
description = "Cryptographic action receipts for AI agents"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Prismer-AI/signet"
readme = "README.md"
keywords = ["ed25519", "signing", "ai-agent", "mcp", "audit"]
categories = ["cryptography", "authentication"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
json-canon = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
dirs = "5"
regex = "1"
serde_yaml = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
